--- a/templates/index.html
+++ b/templates/index.html
@@ -5,6 +5,14 @@
 	<script src="{{ url_for('static', filename='js/rerouter.js') }}"></script>
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--- Google Tag Manager -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9YCMP59NMW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-9YCMP59NMW');
+    </script>
     <!-- squid-lime-xaty -->
 
 <meta charset="utf-8" />
