--- a/templates/peer-evaluation.html
+++ b/templates/peer-evaluation.html
@@ -6,6 +6,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- squid-lime-xaty -->
+    <!--- Google Tag Manager -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-9YCMP59NMW"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+        gtag('config', 'G-9YCMP59NMW');
+    </script>
 
 <meta charset="utf-8" />
 <title>Peer Evaluation &mdash; Singapore Management University</title>
