Connected database to railway

--- a/templates/confirmation-screens.html
+++ b/templates/confirmation-screens.html
@@ -722,7 +722,7 @@
                 <div class="header-actions-action header-actions-action--cta" data-animation-role="header-element">
                   <a
                     class="btn btn--border theme-btn--primary-inverse sqs-button-element--primary"
-                    href="/get-started"
+                    href="{{ url_for('logout') }}"
                     
                   >
                     Logout
@@ -988,7 +988,7 @@
                 <div class="header-actions-action header-actions-action--cta" data-animation-role="header-element">
                   <a
                     class="btn btn--border theme-btn--primary-inverse sqs-button-element--primary"
-                    href="/get-started"
+                    href="{{ url_for('logout') }}"
                     
                   >
                     Logout
@@ -1411,7 +1411,7 @@
             <div class="header-menu-cta">
               <a
                 class="theme-btn--primary btn sqs-button-element--primary"
-                href="/get-started"
+                href="{{ url_for('logout') }}"
                 
               >
                 Logout
