Changed functionality of dropdown list for Evaluatee/Stability Issues

--- a/templates/confirmation-screens.html
+++ b/templates/confirmation-screens.html
@@ -1967,12 +1967,12 @@
   data-button-type="primary"
 > 
   <a 
-    href="{{ url_for('peer_evaluation') }}" 
+    href="{{ url_for('student_dashboard') }}" 
     class="sqs-block-button-element--medium sqs-button-element--primary sqs-block-button-element"
     data-sqsp-button
     
   >
-    Submit Another Response
+    Return to Dashboard
   </a>
   <style>
     #block-yui_3_17_2_1_1759896778000_6207 {
