--- a/templates/student-dashboard.html
+++ b/templates/student-dashboard.html
@@ -2265,8 +2265,109 @@
 
   
   
+  
 
 
+<!-- Enrolled Courses Section -->
+<div class="fe-block fe-block-enrolled-courses"><div class="sqs-block html-block sqs-block-html" data-block-type="2" data-sqsp-block="text"><div class="sqs-block-content">
+
+<style>
+  .enrolled-courses-container {
+    width: 60%;
+    margin: 40px auto;
+    text-align: left;
+    padding: 40px 0;
+  }
+
+  .enrolled-courses-container h2 {
+    text-align: center;
+    color: #002D72;
+    border-bottom: 3px solid #8C734B;
+    display: inline-block;
+    padding-bottom: 6px;
+    margin-bottom: 30px;
+    font-size: 1.8em;
+    font-weight: 600;
+    width: 100%;
+    text-align: center;
+  }
+
+  .enrolled-courses-list {
+    list-style-type: none;
+    padding-left: 0;
+    margin: 0;
+  }
+
+  .student-course {
+    border-left: 4px solid #002D72;
+    padding-left: 20px;
+    margin-bottom: 25px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+  }
+
+  .student-course h3 {
+    margin-bottom: 5px;
+    color: #002D72;
+    font-size: 1.3em;
+    font-weight: 700;
+  }
+
+  .student-course p {
+    margin: 4px 0;
+    font-size: 1em;
+  }
+
+  .student-course em {
+    color: #555;
+    font-style: italic;
+  }
+
+  .student-course strong {
+    color: #002D72;
+    font-weight: 600;
+  }
+
+  .no-courses-message {
+    text-align: center;
+    color: #666;
+    font-style: italic;
+    padding: 20px;
+  }
+</style>
+
+<div class="sqs-html-content" data-sqsp-text-block-content>
+  <div class="enrolled-courses-container">
+    <h2>Enrolled Courses</h2>
+    {% if courses %}
+      <ul class="enrolled-courses-list">
+        {% for course in courses %}
+          <li class="student-course">
+            <h3>{{ course.CourseCode }} – {{ course.CourseName }}</h3>
+            <p><em>{{ course.Semester }} {{ course.Year }}{% if course.CourseTime %} / {{ course.CourseTime }}{% endif %}</em></p>
+            
+            {% if course.EvalScheduleDate %}
+              <p>Scheduled on {{ course.EvalScheduleDate.strftime('%B %d, %Y') }}</p>
+            {% else %}
+              <p><em>No evaluation scheduled yet</em></p>
+            {% endif %}
+
+            {% if course.EvalDueDate %}
+              <p><strong>Due {{ course.EvalDueDate.strftime('%B %d, %Y') }}</strong></p>
+            {% else %}
+              <p><em>No due date assigned</em></p>
+            {% endif %}
+          </li>
+        {% endfor %}
+      </ul>
+    {% else %}
+      <p class="no-courses-message">No courses enrolled.</p>
+    {% endif %}
+  </div>
+</div>
+
+</div></div></div>
+<!-- End Enrolled Courses Section -->
 
 </div></div></div></div></div>
     </div>
